--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class="profile">
     <img src="images/img.png" alt="my_photo" style="width: 200px">
     <h2>Hello.</h2>
-    <p class="intro">I decided to build my own CV website starting from the basic HTML and CSS knowledge.</p>
+    <p class="intro">I've decided to build my own CV website starting from the basic HTML and CSS knowledge.</p>
   </div>
   <hr>
   <div class="skills">
@@ -46,7 +46,7 @@
       <img class="cali_image" src="images/cali.jpg" alt="">
       <h3>Calisthenics</h3>
       <!--style="clear: right"-->
-      <p>I am trying to focus also on body training, I have to admit that lately I am giving it not as much time as I would like to. But very soon I will be less distracted.</p>
+      <p>I am trying to focus also on body training, I have to admit that lately I am giving it not as much time as I would like to, but very soon I will be less distracted.</p>
     </div>
   </div>
   <hr>
