--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <div class="skill-row">
       <img class="code_image" src="images/filter.png" alt="">
       <h3>Programming</h3>
-      <p>I am very new to programming I started somehow 8 months ago with python, my next step will be becoming advanced with python and learning HTML, CSS and JavaScript</p>
+      <p>I am very new to programming I started somehow eight months ago with python, my next step will be becoming advanced with python and learn HTML, CSS and JavaScript</p>
     </div>
     <div class="skill-row">
       <img class="cali_image" src="images/cali.jpg" alt="">
       <h3>Calisthenics</h3>
       <!--style="clear: right"-->
-      <p>I am trying to focus also on body training, I have to admit that lately I am giving it not as much time as I would like to, but very soon I will be less distracted.</p>
+      <p>I am trying to focus also on body training, I have to admit that lately I am not giving it as much time as I would like to, but very soon I will be less distracted.</p>
     </div>
   </div>
   <hr>
