--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="skill-row">
       <img class="code_image" src="images/filter.png" alt="">
       <h3>Programming</h3>
-      <p>I am very new to programming I started somehow eight months ago with python, my next step will be becoming advanced with python and learn HTML, CSS and JavaScript</p>
+      <p>I am very new to programming I started somehow eight months ago with python, my next step will be becoming advanced with python and lear HTML, CSS and JavaScript</p>
     </div>
     <div class="skill-row">
       <img class="cali_image" src="images/cali.jpg" alt="">
@@ -52,7 +52,7 @@
   <hr>
   <div class="contact-me">
     <h2>Get In Touch</h2>
-    <h3>If you are crazy enough to think I am good programmer.</h3>
+    <h3>If you are foolish enough to think that I am good programmer.</h3>
     <p style="width: 40%; margin: 40px auto 60px">For any doubt please do not contact me, I am not so skilled to help you right now!! 😁.</p>
     <!-- <a class="btn" href="mailto:name@email.com" style="color: #11999E">CONTACT ME</a> -->
     <form action="mailto:name@email.com">
