--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
   <a class="footer-link" href="https://twitter.com/">Twitter</a>
-  <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+  <a class="footer-link" href="https://www.google.com/">Website</a>
   <p style="color: #EAF6F6; font-size: 0.75rem; padding: 20px 0">© 2022 Ervis Shullazi.</p>
 </div>
 </body>
